@@ -660,7 +660,7 @@ static int		EvalStatsCmd(ClientData clientData,
 			    Tcl_Obj *const objv[]);
 #endif /* TCL_COMPILE_STATS */
 #ifdef TCL_COMPILE_DEBUG
-static CONST86 char *	GetOpcodeName(unsigned char *pc);
+static const char *	GetOpcodeName(unsigned char *pc);
 static void		PrintByteCodeInfo(ByteCode *codePtr);
 static const char *	StringForResultCode(int result);
 static void		ValidatePcAndStackTop(ByteCode *codePtr,
@@ -8431,7 +8431,7 @@ GetExceptRangeForPc(
  */
 
 #ifdef TCL_COMPILE_DEBUG
-static CONST86 char *
+static const char *
 GetOpcodeName(
     unsigned char *pc)		/* Points to the instruction whose name should
 				 * be returned. */
